changes not completed

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node --watch server.js"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
